-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 9
-
Component/s: hotspot
-
b74
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8135587 | emb-9 | Daniel Daugherty | P4 | Resolved | Fixed | team |
Temporarily backout the fix for JDK-8087143 due to the failures in JDK-8130115.
- backported by
-
JDK-8135587 backout 8087143 (2 bytes Symbol::_identity_hash) due to failures in 8130115
-
- Resolved
-
- relates to
-
JDK-8087143 Reduce Symbol::_identity_hash to 2 bytes
-
- Resolved
-
-
JDK-8130115 REDO - Reduce Symbol::_identity_hash to 2 bytes
-
- Resolved
-