8130135: backout 8087143 due to failures in 8130115

Reviewed-by: minqi, coleenp